--- a/projects/Beech.html
+++ b/projects/Beech.html
@@ -7,48 +7,66 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roobert:wght@300;400;500;700&display=swap">
 </head>
 <body>
-  <div id="topBar">
-    <div id="branding">
+  <div id="topBar" class="top-bar">
+    <div id="branding" class="branding">
       <img src="Beech Buccaneers.png" alt="Beech Buccaneers Logo">
     </div>
-    <div id="navigation">
-      <a href="#">Parent/Student</a>
-      <a href="#">About Us</a>
-      <a href="#">Faculty</a>
-      <a href="#">Parent Organization</a>
-      <a href="#">Library</a>
-      <a href="#">Counseling Office</a>
+    <div id="navigation" class="navigation">
+      <a href="#" class="nav-link">Parent/Student</a>
+      <a href="#" class="nav-link">About Us</a>
+      <a href="#" class="nav-link">Faculty</a>
+      <a href="#" class="nav-link">Parent Organization</a>
+      <a href="#" class="nav-link">Library</a>
+      <a href="#" class="nav-link">Counseling Office</a>
     </div>
   </div>
-  <div id="backgroundOverlay">
-    <a href="https://sis-sumner.tnk12.gov/scripts/wsisa.dll/WService=wsSUMStu/seplog01.w" target="_blank">
-      <img id="skywardImage" src="skyward.jpg" alt="Skyward Image">
+  <div id="backgroundOverlay" class="background-overlay">
+    <a href="https://sis-sumner.tnk12.gov/scripts/wsisa.dll/WService=wsSUMStu/seplog01.w" target="_blank" class="external-link">
+      <img id="skywardImage" src="skyward.jpg" alt="Skyward Image" class="external-link-image">
     </a>
-    <a href="https://clever.com/oauth/authorize?response_type=code&state=4b400b83cf0ffd8d138aca2b304fcbea491d574aeb6246561e3098079592f5b8&redirect_uri=https%3A%2F%2Fclever.com%2Fin%2Fauth_callback&client_id=4c63c1cf623dce82caac&confirmed=true&channel=clever&district_id=564ce53aa5d3140100000362" target="_blank">
-      <img id="cleverImage" src="clever.jpg" alt="Clever Image">
+    <a href="https://clever.com/oauth/authorize?response_type=code&state=4b400b83cf0ffd8d138aca2b304fcbea491d574aeb6246561e3098079592f5b8&redirect_uri=https%3A%2F%2Fclever.com%2Fin%2Fauth_callback&client_id=4c63c1cf623dce82caac&confirmed=true&channel=clever&district_id=564ce53aa5d3140100000362" target="_blank" class="external-link">
+      <img id="cleverImage" src="clever.jpg" alt="Clever Image" class="external-link-image">
     </a>
-    <a href="http://sdphotographs.com/schools-1" target="_blank">
-      <img id="stanDunlapImage" src="StanDunlap.png" alt="Stan Dunlap Image">
+    <a href="http://sdphotographs.com/schools-1" target="_blank" class="external-link">
+      <img id="stanDunlapImage" src="StanDunlap.png" alt="Stan Dunlap Image" class="external-link-image">
     </a>
-    <div id="leftContent">
-      <div class="link-group">
+    <div id="leftContent" class="left-content">
+      <div class="link-group parents">
         <h3>Parents</h3>
-        <a href="https://bus.sumnerschools.org/elinkrp/Students/BasicTransBoundarySearch.aspx" target="_blank">Bus School Zone Lookup</a>
+        <a href="https://bus.sumnerschools.org/elinkrp/Students/BasicTransBoundarySearch.aspx" target="_blank" class="parent-link">Bus School Zone Lookup</a>
         <hr class="divider">
-        <a href="https://sumnerschools.org/images/documents/ParentNotification.pdf" target="_blank">Parent Notification</a>
+        <a href="https://sumnerschools.org/images/documents/ParentNotification.pdf" target="_blank" class="parent-link">Parent Notification</a>
         <hr class="divider">
-        <a href="https://sumnerschools.org/images/documents/ComplaintProcedures.pdf" target="_blank">Complaint Procedures</a>
+        <a href="https://sumnerschools.org/images/documents/ComplaintProcedures.pdf" target="_blank" class="parent-link">Complaint Procedures</a>
         <hr class="divider">
-        <a href="https://linqconnect.com/main" target="_blank">LINQ Connect Meal Payments</a>
+        <a href="https://linqconnect.com/main" target="_blank" class="parent-link">LINQ Connect Meal Payments</a>
       </div>
     </div>
     <div class="link-group legal">
       <h3>Legal</h3>
-      <a href="https://cache.sumnerschools.org/img/LibraryBookList2022.pdf" target="_blank">Sumner County Library Book List</a>
+      <a href="https://cache.sumnerschools.org/img/LibraryBookList2022.pdf" target="_blank" class="legal-link">Sumner County Library Book List</a>
       <hr class="divider">
-      <a href="https://sumnerschools.org/images/admin/statestatuatoryrightsofparentsandstudents-6.13.16.pdf" target="_blank">Rights of Parents and Students</a>
+      <a href="https://sumnerschools.org/images/admin/statestatuatoryrightsofparentsandstudents-6.13.16.pdf" target="_blank" class="legal-link">Rights of Parents and Students</a>
       <hr class="divider">
-      <a href="https://sumnerschools.org/index.php/accessibility-statement" target="_blank">Accessibility statement for Sumner County Schools</a>
+      <a href="https://sumnerschools.org/index.php/accessibility-statement" target="_blank" class="legal-link">Accessibility statement for Sumner County Schools</a>
+    </div>
+    <div class="student-handbook">
+      <a href="https://bhs.sumnerschools.org/images/2023-2024/2023-2024_Beech_Student_Handbook.pdf" target="_blank" class="student-handbook-link">Student Handbook</a>
+    </div>
+    <div class="faqs-ipads-responsible-use-agreement">
+      <a href="https://bhs.sumnerschools.org/images/2023-2024/FAQs_from_Parents_about_iPads_and_the_Responsible_Use_Agreement.pdf" target="_blank" class="faqs-ipads-responsible-use-agreement-link">FAQs for iPads and the Responsible Use Agreement</a>
+    </div>
+    <div class="replacement-ipad-charger">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1GukOqHrinYohmM6OoVi0Fe_euMZy-xYqOAMrqv12pTEabQ/viewform" target="_blank" class="replacement-ipad-charger-link">Replacement iPad Charger</a>
+    </div>
+    <div class="replacement-charger-online">
+      <a href="https://sumnerschools.schoolcashonline.com/Fee/Details/889/445/False/True" target="_blank" class="replacement-charger-online-link">Replacement Charger Online</a>
+    </div>
+    <div class="school-store">
+      <a href="https://sumnerschools.schoolcashonline.com/" target="_blank" class="school-store-link">School Store</a>
+    </div>
+    <div class="tickets-to-school-events">
+      <a href="https://gofan.co/app/school/TN8554" target="_blank" class="tickets-to-school-events-link">Tickets to School Events at GoFan.co</a>
     </div>
   </div>
 </body>
